--- a/config/zones/US-CAL-IID.yaml
+++ b/config/zones/US-CAL-IID.yaml
@@ -175,6 +175,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -184,6 +187,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 992.920614108907
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1019.6370786222118
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -194,6 +201,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 476.4590307322262
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 475.02972183973407
     geothermal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -204,6 +214,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 34.7206661443073
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 33.30793611464112
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -235,6 +248,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 740.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 692.2365799135232
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -279,6 +296,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2014-01-01'
       source: IPCC 2014
@@ -291,6 +312,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1052.920614108907
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1079.637078622212
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -301,6 +326,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 596.4590307322262
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 595.0297218397341
     geothermal:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -311,6 +339,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 72.7206661443073
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 71.30793611464112
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -354,6 +385,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 984.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 936.2365799135232
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
