--- a/config/zones/US-CAL-LDWP.yaml
+++ b/config/zones/US-CAL-LDWP.yaml
@@ -259,6 +259,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -269,6 +272,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 959.7792762377535
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 992.1244778240007
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -279,6 +285,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 397.5065787395667
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 403.5204537908115
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -288,6 +297,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -319,6 +332,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 740.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 692.2365799135232
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -363,6 +380,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -373,6 +394,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1019.7792762377535
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1052.1244778240007
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -383,6 +407,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 517.5065787395667
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 523.5204537908114
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -392,6 +419,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -435,6 +466,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 984.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 936.2365799135232
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
