--- a/config/zones/US-CAR-CPLE.yaml
+++ b/config/zones/US-CAR-CPLE.yaml
@@ -292,6 +292,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -302,6 +305,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 1035.5709252777651
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1044.133961609779
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -312,6 +318,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 412.1979214448654
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 391.6090306908343
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -321,6 +330,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -352,6 +365,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 740.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 692.2365799135232
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -396,6 +413,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -407,6 +428,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1095.5709252777651
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1104.133961609779
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -417,6 +441,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 532.1979214448654
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 511.6090306908343
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -426,6 +453,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -469,6 +500,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 984.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 936.2365799135232
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
