--- a/config/zones/US-CAR-SC.yaml
+++ b/config/zones/US-CAR-SC.yaml
@@ -145,6 +145,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -155,6 +158,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 1035.7452411944068
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1028.8970523880782
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -165,6 +171,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 456.17959601383194
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 471.2653214613073
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -174,6 +183,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -204,6 +217,10 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 1612.9238663414549
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 692.2365799135232
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -248,6 +265,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -259,6 +280,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1095.7452411944068
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1088.8970523880782
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -269,6 +293,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 576.179596013832
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 591.2653214613073
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -278,6 +305,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -320,6 +351,10 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1856.9238663414549
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 936.2365799135232
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
