--- a/config/zones/US-CENT-SPA.yaml
+++ b/config/zones/US-CENT-SPA.yaml
@@ -142,6 +142,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -152,6 +155,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 1064.67361209247
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1078.5537883747247
     gas:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -161,6 +167,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 409.0168159348194
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 406.9490004903347
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -170,6 +180,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -201,6 +215,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 740.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 692.2365799135232
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -242,6 +260,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -252,6 +274,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1124.67361209247
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1138.5537883747247
     gas:
     - datetime: '2014-01-01'
       source: IPCC 2014
@@ -264,6 +289,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 529.0168159348194
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 526.9490004903347
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -273,6 +302,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -316,6 +349,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 984.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 936.2365799135232
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2015 average
