--- a/config/zones/US-FLA-FMPP.yaml
+++ b/config/zones/US-FLA-FMPP.yaml
@@ -134,6 +134,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -144,6 +147,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 763.2191822274799
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 744.4422069628371
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -154,6 +160,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 399.91916460663316
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 396.92867418651286
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -163,6 +172,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -193,6 +206,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 740.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 692.2365799135232
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -234,6 +251,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -244,6 +265,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 823.2191822274799
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 804.4422069628371
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -254,6 +278,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 519.9191646066331
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 516.9286741865128
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -263,6 +290,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -305,6 +336,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 984.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 936.2365799135232
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
