--- a/config/zones/US-MIDW-AECI.yaml
+++ b/config/zones/US-MIDW-AECI.yaml
@@ -127,6 +127,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -137,6 +140,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 937.267777658772
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 968.7795683618425
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -147,6 +153,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 406.3004425342369
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 398.6815069287052
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -156,6 +165,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -186,6 +199,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 740.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 692.2365799135232
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -227,6 +244,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -238,6 +259,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 997.267777658772
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1028.7795683618424
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -248,6 +272,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 526.3004425342369
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 518.6815069287052
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -257,6 +284,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -299,6 +330,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 984.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 936.2365799135232
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
