--- a/config/zones/US-MIDW-LGEE.yaml
+++ b/config/zones/US-MIDW-LGEE.yaml
@@ -136,6 +136,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -146,6 +149,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 929.2484998403622
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 972.8814209119845
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -156,6 +162,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 402.09632811290464
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 377.4280726544936
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -165,6 +174,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -196,6 +209,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 740.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 692.2365799135232
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -237,6 +254,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -248,6 +269,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 989.2484998403622
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1032.8814209119846
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -258,6 +282,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 522.0963281129046
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 497.4280726544936
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -267,6 +294,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -310,6 +341,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 984.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 936.2365799135232
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2015 average
