--- a/config/zones/US-NW-PACE.yaml
+++ b/config/zones/US-NW-PACE.yaml
@@ -307,6 +307,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -317,6 +320,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 1047.4235967504487
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1096.453245499706
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -327,6 +333,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 410.0950813261025
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 411.8612718735854
     geothermal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -337,6 +346,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 25.855668050323082
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 24.805281488072655
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -368,6 +380,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 740.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 692.2365799135232
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -406,6 +422,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -417,6 +437,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1107.4235967504487
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1156.453245499706
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -427,6 +450,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 530.0950813261024
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 531.8612718735853
     geothermal:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -437,6 +463,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 63.85566805032308
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 62.80528148807265
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -477,6 +506,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 984.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 936.2365799135232
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
