--- a/config/zones/US-NW-PSCO.yaml
+++ b/config/zones/US-NW-PSCO.yaml
@@ -337,6 +337,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -347,6 +350,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 1041.816747591299
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1087.1965526428457
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -357,6 +363,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 525.3410692589177
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 450.847303672373
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -366,6 +375,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -397,6 +410,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 740.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 692.2365799135232
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -435,6 +452,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -446,6 +467,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1101.816747591299
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1147.1965526428457
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -456,6 +480,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 645.3410692589177
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 570.8473036723731
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -465,6 +492,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -505,6 +536,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 984.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 936.2365799135232
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
