--- a/config/zones/US-SW-AZPS.yaml
+++ b/config/zones/US-SW-AZPS.yaml
@@ -221,6 +221,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -231,6 +234,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 991.2994370558566
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1003.8223333180867
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -241,6 +247,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 394.6192180069698
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 335.1262756050809
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -250,6 +259,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -281,6 +294,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 740.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 692.2365799135232
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -322,6 +339,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -333,6 +354,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1051.2994370558567
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1063.8223333180867
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -343,6 +367,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 514.6192180069697
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 455.1262756050809
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -352,6 +379,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -392,6 +423,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 984.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 936.2365799135232
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
