--- a/config/zones/US-SW-TEPC.yaml
+++ b/config/zones/US-SW-TEPC.yaml
@@ -163,6 +163,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -173,6 +176,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 1049.8710181012766
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1043.24530714986
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -183,6 +189,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 522.3770975723654
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 363.84094767168796
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -192,6 +201,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -223,6 +236,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 740.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 692.2365799135232
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -261,6 +278,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -271,6 +292,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1109.8710181012766
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1103.24530714986
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -281,6 +305,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 642.3770975723654
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 483.84094767168796
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -290,6 +317,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -330,6 +361,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 984.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 936.2365799135232
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
