--- a/config/zones/US-SW-WALC.yaml
+++ b/config/zones/US-SW-WALC.yaml
@@ -169,6 +169,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2021-01-01'
       source: eGrid 2021
@@ -176,6 +179,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 866.6840107698806
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 681.6270222428261
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -186,6 +192,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 408.36356010340177
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 408.23419876051724
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -195,6 +204,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -226,6 +239,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 740.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 692.2365799135232
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -264,6 +281,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2012-01-01'
       source: IPCC 2014; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -275,6 +296,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 926.6840107698806
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 741.6270222428261
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -285,6 +309,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 528.3635601034018
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 528.2341987605173
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -294,6 +321,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -334,6 +365,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 984.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 936.2365799135232
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2015 average
