--- a/config/zones/US-AK.yaml
+++ b/config/zones/US-AK.yaml
@@ -15,6 +15,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -25,6 +28,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 1051.2364608925723
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 549.6543077858046
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -35,6 +41,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 442.8330050139731
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 454.4318787852343
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -44,6 +53,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -54,6 +67,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 665.4770914121948
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 682.5489198648306
   lifecycle:
     biomass:
     - _comment: Mean of all US zones
@@ -64,6 +80,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -75,6 +95,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1111.2364608925723
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 609.6543077858046
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -85,6 +108,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 562.8330050139731
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 574.4318787852343
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -94,6 +120,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -104,6 +134,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 909.4770914121948
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 926.5489198648306
 region: Americas
 sources:
   IPCC 2014:
