--- a/config/zones/US-CAL-BANC.yaml
+++ b/config/zones/US-CAL-BANC.yaml
@@ -169,6 +169,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -178,6 +181,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 992.920614108907
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1019.6370786222118
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -188,6 +195,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 422.466789435152
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 401.96410840720097
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -197,6 +207,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -228,6 +242,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 740.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 692.2365799135232
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -269,6 +287,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2014-01-01'
       source: IPCC 2014
@@ -281,6 +303,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1052.920614108907
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1079.637078622212
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -291,6 +317,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 542.466789435152
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 521.9641084072009
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -300,6 +329,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -343,6 +376,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 984.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 936.2365799135232
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
