--- a/config/zones/US-CAL-CISO.yaml
+++ b/config/zones/US-CAL-CISO.yaml
@@ -1042,6 +1042,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -1052,6 +1055,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 495.9798560561009
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 517.8604330816302
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -1062,6 +1068,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 388.48608155190834
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 396.3628485714517
     geothermal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -1072,6 +1081,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 39.63105218869798
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 38.89697026267566
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -1104,6 +1116,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 987.7827758191105
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 945.4848707544354
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -1148,6 +1163,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -1159,6 +1178,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 555.979856056101
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 577.8604330816302
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -1169,6 +1191,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 508.48608155190834
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 516.3628485714517
     geothermal:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -1179,6 +1204,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 77.63105218869798
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 76.89697026267567
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -1220,6 +1248,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1231.7827758191106
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1189.4848707544354
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
