--- a/config/zones/US-CAR-DUK.yaml
+++ b/config/zones/US-CAR-DUK.yaml
@@ -379,6 +379,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -390,6 +393,9 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 992.920614108907
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 746.9759392468122
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -400,6 +406,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 515.1156633369592
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 502.631898437239
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -409,6 +418,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -439,6 +452,10 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 442.79655780749437
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 692.2365799135232
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -480,6 +497,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -492,6 +513,9 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1052.920614108907
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 806.9759392468122
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -502,6 +526,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 635.1156633369592
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 622.631898437239
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -511,6 +538,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -553,6 +584,10 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 686.7965578074943
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 936.2365799135232
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
