--- a/config/zones/US-CAR-SCEG.yaml
+++ b/config/zones/US-CAR-SCEG.yaml
@@ -239,6 +239,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -249,6 +252,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 972.0663633884146
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 978.9970212509144
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -259,6 +265,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 451.1888745347415
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 436.0425147557432
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -268,6 +277,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -298,6 +311,10 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 1297.8346930177995
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 692.2365799135232
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -342,6 +359,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -353,6 +374,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1032.0663633884146
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1038.9970212509143
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -363,6 +387,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 571.1888745347414
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 556.0425147557432
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -372,6 +399,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -414,6 +445,10 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1541.8346930177995
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 936.2365799135232
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
