--- a/config/zones/US-FLA-FPC.yaml
+++ b/config/zones/US-FLA-FPC.yaml
@@ -244,6 +244,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -254,6 +257,10 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 558.6454964558035
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1019.6370786222118
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -264,6 +271,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 426.84458929288365
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 457.83672479746605
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -273,6 +283,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -305,6 +319,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 1047.7402736442787
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1047.3624904149933
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -349,6 +366,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -359,6 +380,10 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 618.6454964558035
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1079.637078622212
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -369,6 +394,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 546.8445892928837
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 577.8367247974661
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -378,6 +406,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -419,6 +451,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1291.7402736442787
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1291.3624904149933
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
