--- a/config/zones/US-FLA-FPL.yaml
+++ b/config/zones/US-FLA-FPL.yaml
@@ -244,6 +244,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -253,6 +256,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 992.920614108907
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1019.6370786222118
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -263,6 +270,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 359.44438512281965
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 367.9628636512186
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -272,6 +282,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -304,6 +318,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 289.96851114965034
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 175.09320207293555
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -348,6 +365,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2014-01-01'
       source: IPCC 2014
@@ -360,6 +381,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1052.920614108907
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1079.637078622212
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -370,6 +395,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 479.44438512281965
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 487.9628636512186
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -379,6 +407,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -420,6 +452,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 533.9685111496503
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 419.0932020729356
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
