--- a/config/zones/US-FLA-SEC.yaml
+++ b/config/zones/US-FLA-SEC.yaml
@@ -112,6 +112,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -122,6 +125,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 895.9786783369478
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 596.0092651928338
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -132,6 +138,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 400.49726922891256
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 398.6011426902413
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -141,6 +150,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -172,6 +185,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 740.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 692.2365799135232
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -213,6 +230,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -224,6 +245,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 955.9786783369478
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 656.0092651928338
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -234,6 +258,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 520.4972692289125
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 518.6011426902413
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -243,6 +270,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -286,6 +317,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 984.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 936.2365799135232
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
