--- a/config/zones/US-MIDA-PJM.yaml
+++ b/config/zones/US-MIDA-PJM.yaml
@@ -1179,6 +1179,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -1189,6 +1192,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 1005.4635485098644
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1012.036123157226
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -1199,6 +1205,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 396.39237447540444
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 391.3347811532124
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -1208,6 +1217,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -1240,6 +1253,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 925.272532343084
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 860.2336465682306
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -1284,6 +1300,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -1295,6 +1315,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1065.4635485098643
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1072.036123157226
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -1305,6 +1328,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 516.3923744754045
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 511.3347811532124
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -1314,6 +1340,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -1355,6 +1385,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1169.272532343084
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1104.2336465682306
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
