--- a/config/zones/US-MIDW-MISO.yaml
+++ b/config/zones/US-MIDW-MISO.yaml
@@ -1260,6 +1260,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -1270,6 +1273,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 1000.874550756691
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1006.1838904224804
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -1280,6 +1286,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 411.3519924413645
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 387.75646401136976
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -1289,6 +1298,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -1321,6 +1334,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 501.6935207852357
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 78.97966175586572
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -1365,6 +1381,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -1376,6 +1396,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1060.874550756691
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1066.1838904224805
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -1386,6 +1409,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 531.3519924413645
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 507.75646401136976
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -1395,6 +1421,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -1436,6 +1466,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 745.6935207852357
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 322.9796617558657
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
