--- a/config/zones/US-NE-ISNE.yaml
+++ b/config/zones/US-NE-ISNE.yaml
@@ -883,6 +883,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -893,6 +896,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 1086.1257778671156
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1052.0466873316557
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -903,6 +909,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 392.1225766993324
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 387.7783523455759
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -912,6 +921,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -944,6 +957,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 895.8408038663823
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 976.0253449225385
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -988,6 +1004,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -999,6 +1019,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1146.1257778671156
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1112.0466873316557
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -1009,6 +1032,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 512.1225766993324
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 507.7783523455759
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -1018,6 +1044,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -1059,6 +1089,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1139.8408038663824
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1220.0253449225384
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
