--- a/config/zones/US-NW-NEVP.yaml
+++ b/config/zones/US-NW-NEVP.yaml
@@ -298,6 +298,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -308,6 +311,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 1049.698182363371
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1124.243615415859
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -318,6 +324,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 400.24829769089723
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 403.4625388058051
     geothermal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -328,6 +337,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 1.1347416194747946
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1.183420260702788
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -359,6 +371,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 740.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 692.2365799135232
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -397,6 +413,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -408,6 +428,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1109.698182363371
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1184.243615415859
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -418,6 +441,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 520.2482976908973
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 523.462538805805
     geothermal:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -428,6 +454,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 39.134741619474795
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 39.18342026070279
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -468,6 +497,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 984.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 936.2365799135232
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
