--- a/config/zones/US-NY-NYIS.yaml
+++ b/config/zones/US-NY-NYIS.yaml
@@ -704,6 +704,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -716,6 +719,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 992.920614108907
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1019.6370786222118
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -726,6 +733,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 419.59471382500686
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 417.41468220380995
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -735,6 +745,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -767,6 +781,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 660.944095982844
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 503.6367578727004
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -808,6 +825,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -821,6 +842,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1052.920614108907
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1079.637078622212
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -831,6 +856,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 539.5947138250069
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 537.4146822038099
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -840,6 +868,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -878,6 +910,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 904.944095982844
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 747.6367578727004
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
