--- a/config/zones/US-SE-SOCO.yaml
+++ b/config/zones/US-SE-SOCO.yaml
@@ -497,6 +497,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -507,6 +510,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 865.3097109319093
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1039.9273282774575
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -517,6 +523,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 403.40194702138473
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 424.35485209409916
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -526,6 +535,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -558,6 +571,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 362.1182499048772
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 249.87130843532887
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -599,6 +615,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -610,6 +630,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 925.3097109319093
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1099.9273282774575
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -620,6 +643,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 523.4019470213848
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 544.3548520940992
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -629,6 +655,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -667,6 +697,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 606.1182499048772
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 493.87130843532884
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
