--- a/config/zones/US-SW-SRP.yaml
+++ b/config/zones/US-SW-SRP.yaml
@@ -196,6 +196,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -206,6 +209,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 1190.7635865078173
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1187.512537600055
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -216,6 +222,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 386.11117611501976
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 414.8222825456002
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -225,6 +234,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -256,6 +269,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 740.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 692.2365799135232
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -294,6 +311,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -304,6 +325,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1250.7635865078173
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1247.512537600055
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -314,6 +338,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 506.11117611501976
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 534.8222825456003
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -323,6 +350,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -363,6 +394,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 984.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 936.2365799135232
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
