--- a/config/zones/US-TEN-TVA.yaml
+++ b/config/zones/US-TEN-TVA.yaml
@@ -304,6 +304,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -314,6 +317,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 1120.384301079964
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1156.4235068348414
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -324,6 +330,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 392.2385664881519
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 385.90626654070894
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -333,6 +342,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -367,6 +380,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 740.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 692.2365799135232
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -408,6 +425,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -419,6 +440,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1180.384301079964
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1216.4235068348414
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -429,6 +453,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 512.238566488152
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 505.90626654070894
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -438,6 +465,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -478,6 +509,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 984.5235575792449
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 936.2365799135232
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
