--- a/config/zones/US-TEX-ERCO.yaml
+++ b/config/zones/US-TEX-ERCO.yaml
@@ -873,6 +873,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2023-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -883,6 +886,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 1041.5714428045928
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1062.9695874892159
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -893,6 +899,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 393.7660838295522
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 391.8932985233733
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -902,6 +911,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 29.707905036391203
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 28.739435464835893
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -934,6 +947,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022
       value: 1068.5017353846156
+    - datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 1479.6758322526446
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -975,6 +991,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022
       value: 274.05045073430733
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023
+      value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
@@ -986,6 +1006,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1101.5714428045928
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1122.9695874892159
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
@@ -996,6 +1019,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 513.7660838295521
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 511.8932985233733
     geothermal:
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
@@ -1005,6 +1031,10 @@ emissionFactors:
       datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 67.7079050363912
+    - _comment: Mean of all US zones
+      datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 66.73943546483589
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -1043,6 +1073,9 @@ emissionFactors:
     - datetime: '2022-01-01'
       source: eGrid 2022; IPCC 2014
       value: 1312.5017353846156
+    - datetime: '2023-01-01'
+      source: eGrid 2023; IPCC 2014
+      value: 1723.6758322526446
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
